Refactoring and javadoc revision